--- a/test_con_detectron2.ipynb
+++ b/test_con_detectron2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(480, 640, 3)\n",
-      "\u001b[5m\u001b[31mWARNING\u001b[0m \u001b[32m[01/10 17:22:55 d2.config.compat]: \u001b[0mConfig '/home/asung/detectron2/detectron2/detectron2/detectron2/model_zoo/configs/../configs/COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml' has no VERSION. Assuming it to be compatible with latest v2.\n"
+      "(1080, 1440, 3)\n"
      ]
     }
    ],
    "source": [
-    "im = cv2.imread(\"input.jpg\")#/home/asung/detImage/i1.jpeg\n",
+    "im = cv2.imread(\"/home/asung/detImage/h.jpg\")#/home/asung/detImage/i1.jpeg\n",
     "print(im.shape)\n",
     "cfg = get_cfg()\n",
     "# add project-specific config (e.g., TensorMask) here if you're not running a model in detectron2's core library\n",
